# molim

./: .coveragerc  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  check.py  cli.py  commands.py  do  dox  go.py  images.py  molim  processing.py  pyproject.toml  rename.py  roadmap.txt  show.py  stats.py  util.py  video.py  w_all.py  workspace.code-workspace
.devcontainer/: .claude.json.template  Dockerfile  entrypoint.sh
.devcontainer/claude-dev/: .claude.json.template  Dockerfile  entrypoint.sh
.devcontainer/envoy/: envoy.yaml.template
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: base.yml  ci.yml  release.yml
docs/: AGENTIC-SDLC.md  CLAUDE-DEV-ENVIRONMENT.md  DEV-ENVIRONMENT.md  SDLC.md
scripts/: claude-dev.env  claude-dev.sh  claude-dev.tmux.conf
src/molim/: __init__.py  check.py  cli.py  commands.py  config.py  images.py  processing.py  rename.py  shell.py  show.py  stats.py  video.py
src/molim/images/: __init__.py  imagemagick.py  jpegify.py  rawtherapee.py  resize.py
tests/: cli_test.py  commands_test.py  common.py  config_test.py  filestats_test.py  folderstats_test.py  images_test.py  processing_files_test.py  processing_folders_test.py  rawtherapee_test.py  rename_test.py  shell_test.py  show_test.py  stats_test.py  video_test.py
tests/data/config/: config.toml
tests/data/jpegify/: file example WEBP_500kB.avif  file example WEBP_500kB.heic  file_example_WEBP_250kB.avif  file_example_WEBP_250kB.heic  file_example_WEBP_50kB.avif  file_example_WEBP_50kB.heic
tests/data/rawtherapee/: profile.pp3
