[project]
name = "molim"
version = "0.3.1"
description = "A collection of utility commands to process and optimize files."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "rich>=13.9.4",
    "sh>=2.2.1",
    "tomlkit>=0.13.2",
]

[project.scripts]
molim = "molim:main"

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
]

[tool.pytest.ini_options]
addopts = "--cov=. --cov-config=.coveragerc --cov-report html"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
