[project]
name = "molim"
description = "A collection of utility commands to process and optimize files."
readme = "README.md"
dynamic = ["version"]
requires-python = ">=3.12"
dependencies = [
    "rich>=13.9.4",
    "sh>=2.2.1",
    "tomlkit>=0.13.2",
]

[project.scripts]
molim = "molim:main"

[dependency-groups]
dev = [
    "hatch-vcs>=0.5.0",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
]

[tool.pytest.ini_options]
addopts = "--cov=. --cov-branch --cov-config=.coveragerc --cov-report html --cov-report=xml"

[tool.hatch.version]
source = "vcs"
fallback-version = "0.0.0.dev0"   # used on untagged commits locally

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"
