[project]
name = "molim"
description = "Batch file processing utility for Linux."
homepage = "https://github.com/nightjarrr/molim"
readme = "README.md"
license = { file = "LICENSE" }
dynamic = ["version"]
requires-python = ">=3.12"
dependencies = [
    "rich>=13.9.4",
    "sh>=2.2.1",
    "tomlkit>=0.13.2",
]

[project.scripts]
molim = "molim:main"

[dependency-groups]
dev = [
    "hatch-vcs>=0.5.0",
    "pre-commit>=4.5.1",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "ruff>=0.15.11",
]

[tool.ruff]
line-length = 88 # Black-compatible default
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes (unused imports, undefined names, etc.)
    "I",    # isort (import ordering)
    "UP",   # pyupgrade (modernise Python syntax)
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
addopts = "--cov=. --cov-branch --cov-config=.coveragerc --cov-report html --cov-report=xml"

[tool.hatch.version]
source = "vcs"
fallback-version = "0.0.0.dev0"   # used on untagged commits locally

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"
